# my-code

./: .gitignore  API文档.md  README.en.md  README.md  backend_code_all.txt  docker-compose.yml  project_map.txt  requirements.txt  前端需求.md  后端需求.md  对比分析报告.md  设计说明.xmind  需求文档.md
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  backend.repomix-output.xml  gunicorn.conf.py  main.py  project_structure.txt  pyproject.toml  requirements.txt  test_config.py  test_db_architecture.py  test_kafka.py  test_redis.py
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 2026_04_18_2116-001_initial_migration.py  2026_05_03_1200-002_notifications.py
backend/api/: deps.py
backend/core/: config.py  dependencies.py  enums.py  service_manager.py
backend/data/: admin_log.db  deleted_journal.db  invitation_code.db  journal.db  journal_info.db  review_opinion.db  user_account.db
backend/database/: __init__.py  dependencies.py  uow.py
backend/model/: captcha.py  invitation.py  journal.py  manuscript.py  response.py  user.py
backend/schemas/: journal.py  user.py
backend/service/: admin_log_service.py  captcha_service.py  elasticsearch_service.py  email_service.py  invitation_service.py  kafka_service.py  manuscript_access.py  manuscript_service.py  notification_service.py  payment_service.py  pdf_service.py  rate_limit_service.py  redis_service.py
backend/utils/: admin_log.py  captcha_util.py  database.py  email_code.py  file.py  generator.py  invitation.py  jwt.py  kafka.py  log.py  payment.py  rate_limit.py  redis.py
(+337 files in other folders)
