[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiokafka>=0.13.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "alipay-sdk-python>=3.7.1098",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "captcha>=0.7.1",
    "elasticsearch>=9.3.0",
    "fastapi>=0.136.0",
    "gunicorn>=25.3.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "reportlab>=4.4.10",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    "wechatpayv3[async]>=2.0.2",
]
